  actions with the new configuration setting s3service.admin-max-thread-count.
  These connections run much faster with more threads and as they are light 
  weight they less likely to fail with higher thread counts.
- Fixed S3ServiceSimpleMulti class to work with download sets larger than the
  number of available HTTP connections. Objects' data is now cached in temp
  files automatically.


PATCH KUDOS:
Alexis Agahi for a fix to BytesProgressWatcher.
Pradyumna Lenka for an example bucket location (EU) update.

-------------
Version 0.5.0
-------------

COCKPIT

- Login credentials can now be stored in S3.
- Added a dialog for configuring Bucket Logging.
- Objects can be filtered by prefix and/or delimiter strings.
- Third-party buckets can be added without first logging in.
- User can cancel the listing of objects in large buckets.
- Files being sent to s3 are only opened when necessary, removing the potential
  for too many files to be open at once (exceeding an Operating System 
  imposed limit).
- When uploading files, specific file/directory paths can be ignored 
  using .jets3t-ignore settings files.
- Access Control List permissions of uploaded files can be set to PRIVATE, 
  PUBLIC_READ or PUBLIC_READ_WRITE


SYNCHRONIZE

- Progress status messages are displayed for long-running processes.
- Files being sent to s3 are only opened when necessary, removing the potential
  for too many files to be open at once (exceeding an Operating System 
  imposed limit).
- When uploading files, specific file/directory paths can be ignored 
  using .jets3t-ignore settings files.
- Access Control List permissions of uploaded files can be set to PRIVATE, 
  PUBLIC_READ or PUBLIC_READ_WRITE


UPLOADER

A new applet/application to allow third parties without AWS accounts or 
credentials to upload files to an S3 account. The Uploader provides a simple 
wizard-based GUI allowing end-users to provide information, choose the 
file(s) they will upload, and see upload progress.
